<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_asc"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_name_dsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_dsc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_asc" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_age_dsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_dsc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_asc" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_year_dsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_dsc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_asc" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_month_dsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_dsc"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_asc"/>

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_day_dsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_dsc" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/close_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/close"/>
    </LinearLayout>

</LinearLayout>