<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/dragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/date_of_birth"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/person_remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remarks"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/close_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:textColor="@color/black"
            android:text="@string/close"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/update_person_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:textColor="@color/black"
            android:text="@string/update"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>